# gambling-simulator

./: .gitignore  CMakeLists.txt
backend/: CMakeLists.txt  main.cpp
backend/games/plinko/: CMakeLists.txt  Plinko.cpp  Plinko.h
